--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                                 <li class="nav-item active">
                                     <a href="/Admin/Property" class="LoadingDiv">
                                         <span class="icon-holder">
-                                            <i uk-icon="list"></i>
+                                            <i uk-icon="document-text"></i>
                                         </span>
                                         <span class="title">ویژگی ها</span>
                                     </a>
