--- a/GhasreMobile/Areas/Admin/Views/Brand/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Components/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblBrand
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش برند
     </h6>
@@ -6,22 +7,23 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-controller="Brand" asp-action="Edit" asp-area="Admin" method="post"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام برند</label>
-                <input class="form-control form-control-sm" placeholder="مثال: سامسونگ">
+                <input class="form-control form-control-sm" placeholder="مثال: سامسونگ" asp-for="Name">
             </div>
-        </div>
-        <label class="mt-2">تصویر برند</label>
-        <br />
-        <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm">
-            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
     </div>
     <div class="modal-footer justify-content-end">
         <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
     </div>
 </form>
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
