--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DataLayer.ViewModels.AdminProductVm
+﻿@model DataLayer.Models.TblProduct
 @{
     ViewData["Title"] = "افزودن محصول";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -40,12 +40,12 @@
                         </div>
                     </li>
                 </ul>
-                <input type="hidden" asp-for="product.CatagoryId" />
-                <span id="CatagoryIdErorr" asp-validation-for="product.CatagoryId" class="text-danger"></span>
+                <input type="hidden" asp-for="CatagoryId" />
+                <span id="CatagoryIdErorr" asp-validation-for="CatagoryId" class="text-danger"></span>
                 <hr />
                 <div class="form-row">
                     <div class="form-group col-md-3">
-                        <select asp-for="product.BrandId" class="form-control form-control-sm">
+                        <select asp-for="BrandId" class="form-control form-control-sm">
                             @{
                                 IEnumerable<DataLayer.Models.TblBrand> Brands = ViewBag.Brands;
                             }
@@ -55,47 +55,47 @@
                                 <option value="@item.BrandId">@item.Name</option>
                             }
                         </select>
-                        <input type="hidden" asp-for="product.BrandId" />
-                        <span id="BrandIdErorr" asp-validation-for="product.BrandId" class="text-danger"></span>
+                        <input type="hidden" asp-for="BrandId" />
+                        <span id="BrandIdErorr" asp-validation-for="BrandId" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-row mt-3">
                     <div class="form-group col-md-3">
                         <label>نام محصول</label>
-                        <input asp-for="product.Name" class="form-control form-control-sm" placeholder="مثال : شارژر">
-                        <span asp-validation-for="product.Name" class="text-danger"></span>
+                        <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال : شارژر">
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
                         <label>قیمت</label>
-                        <input asp-for="product.PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 تومان">
-                        <span asp-validation-for="product.PriceBeforeDiscount" class="text-danger"></span>
+                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 تومان">
+                        <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
                         <label>درصد تخفیف</label>
-                        <input asp-for="product.PriceAfterDiscount" maxlength="2" class="form-control form-control-sm" placeholder="مثال : 10">
-                        <span asp-validation-for="product.PriceAfterDiscount" class="text-danger"></span>
+                        <input asp-for="PriceAfterDiscount" maxlength="2" class="form-control form-control-sm" placeholder="مثال : 10">
+                        <span asp-validation-for="PriceAfterDiscount" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="custom-file col-md-7 mt-3">
-                    <input asp-for="product.MainImage" type="file" accept="image/x-png,image/gif,image/jpeg" class="custom-file-input form-control form-control-sm">
+                    <input asp-for="MainImage" type="file" accept="image/x-png,image/gif,image/jpeg" class="custom-file-input form-control form-control-sm">
                     <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
                 </div>
-                <span id="MainImageErorr" class="text-danger" asp-validation-for="product.MainImage"></span>
+                <span id="MainImageErorr" class="text-danger" asp-validation-for="MainImage"></span>
                 <div class="form-row mt-3">
                     <div class="form-group col-md-3">
                         <label>متن جستجو</label>
-                        <input asp-for="product.SearchText" class="form-control form-control-sm" placeholder="مثال : ...">
-                        <span class="text-danger" asp-validation-for="product.SearchText"></span>
+                        <input asp-for="SearchText" class="form-control form-control-sm" placeholder="مثال : ...">
+                        <span class="text-danger" asp-validation-for="SearchText"></span>
                     </div>
                     <div class=" col-md-2 mt-4 pt-3 mr-3">
-                        <input asp-for="product.IsFractional" type="checkbox"> فروش اقساطی
+                        <input asp-for="IsFractional" type="checkbox"> فروش اقساطی
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <input type="text" value="" data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
                     </div>
-                    <span class="text-danger" asp-validation-for="product.TblProductKeywordRel"></span>
+                    <span class="text-danger" asp-validation-for="TblProductKeywordRel"></span>
                 </div>
                 <hr />
 
@@ -116,7 +116,7 @@
                     <div class="form-group col-md-2 mt-md-4 pt-2 text-white">
                         <a id="SubmitColor" class="btn btn-info btn-sm">افزودن</a>
                     </div>
-                    <span id="TblColor" asp-validation-for="product.TblColor" class="text-danger"></span>
+                    <span id="TblColor" asp-validation-for="TblColor" class="text-danger"></span>
                 </div>
                 <aside id="ColorPanel">
                 </aside>
@@ -137,13 +137,13 @@
                 <hr />
                 <div class="mt-3">
                     <label class="ml-5">توضیحات کوتاه :</label>
-                    <textarea id="DescriptionShortHtml" asp-for="product.DescriptionShortHtml"></textarea>
-                    <span class="text-danger" asp-validation-for="product.DescriptionShortHtml"></span>
+                    <textarea id="DescriptionShortHtml" asp-for="DescriptionShortHtml"></textarea>
+                    <span class="text-danger" asp-validation-for="DescriptionShortHtml"></span>
                 </div>
                 <div class="mt-3">
                     <label class="ml-5">توضیحات کامل :</label>
-                    <textarea id="DescriptionLongHtml" asp-for="product.DescriptionLongHtml" style="max-height:300px !important;"></textarea>
-                    <span class="text-danger" asp-validation-for="product.DescriptionLongHtml"></span>
+                    <textarea id="DescriptionLongHtml" asp-for="DescriptionLongHtml" style="max-height:300px !important;"></textarea>
+                    <span class="text-danger" asp-validation-for="DescriptionLongHtml"></span>
                 </div>
                 <hr />
                 <label class="mt-3 uk-text-bold">افزودن عکس به گالری تصاویر</label>
@@ -155,8 +155,8 @@
 
             </div>
             <div class="card-footer bg-white">
-                <button type="submit" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
                 <span class="text-danger"></span>
+                <button type="submit" class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
             </div>
         </form>
     </div>
@@ -192,7 +192,7 @@
             $(".Cat").css('font-weight', 'normal');
             $("#Cat-" + Id).css('color', '#3E9731');
             $("#Cat-" + Id).css('font-weight', 'bold');
-            $("#product_CatagoryId").val(Id);
+            $("#CatagoryId").val(Id);
         };
 
         $("#SubmitColor").click(function () {
@@ -208,7 +208,7 @@
                 $("#InputColorCount").val("");
                 $("#ColorPanel").html(
                     $("#ColorPanel").html() +
-                    "<div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ :" + Name + "</label><div class='uk-border-rounded mr-2 color-box' style='background:" + Color + ";'></div><label class='mr-2'>" + Count + " عدد</label><input type='hidden' name='Colors' value='" + Color + "' /><input type='hidden' name='ColorsCounts' value='" + Count + "' /><span class='text-danger'>&nbsp;(x)</span></div>"
+                    "<div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ :" + Name + "</label><div class='uk-border-rounded mr-2 color-box' style='background:" + Color + ";'></div><label class='mr-2'>" + Count + " عدد</label><input type='hidden' name='Colors' value='" + Color + "' /><input type='hidden' name='ColorsCounts' value='" + Count + "' /><input type='hidden' name='ColorName' value='" + Name + "' /><span class='text-danger'>&nbsp;(x)</span></div>"
                 );
             }
         });
