--- a/GhasreMobile/Areas/Admin/Views/Product/Components/Stock.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/Stock.cshtml
@@ -1,7 +1,8 @@
-﻿<div class="modal-header">
-        <h6 class="modal-title" id="modalCenterTitle">
-            بررسی موجودی 
-        </h6>
+﻿@model IEnumerable<DataLayer.Models.TblColor>
+<div class="modal-header">
+    <h6 class="modal-title" id="modalCenterTitle">
+        بررسی موجودی
+    </h6>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -18,53 +19,47 @@
         </thead>
         <tbody>
 
-            <tr>
-                <td>
-                    <div class="form-row ">
-                        <label class="mr-2"> مشکی </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#000000;"></div>
-                    </div>
-                </td>
-                <td>
-                    <input class="form-control form-control-sm col-md-4" placeholder="مثال:3">
-                </td>
-                <td>
-                    <button class="btn btn-sm btn-success">ثبت</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="form-row ">
-                        <label class="mr-2"> قرمز </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#ff0000;"></div>
-                    </div>
-                </td>
-                <td>
-                    <input class="form-control form-control-sm col-md-4" placeholder="مثال:2">
-                </td>
-                <td>
-                    <button class="btn btn-sm btn-success">ثبت</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="form-row ">
-                        <label class="mr-2"> سرمه ای </label>
-                        <div class=" uk-border-rounded mr-2 color-box" style="background:#225275;"></div>
-                    </div>
-                </td>
-                <td>
-                    <input class="form-control form-control-sm col-md-4" placeholder="مثال:5">
-                </td>
-                <td>
-                    <button class="btn btn-sm btn-success">ثبت</button>
-                </td>
-            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <div class="form-row ">
+                            <label class="mr-2"> @item.Name </label>
+                            <div class=" uk-border-rounded mr-2 color-box" style="background:@item.ColorCode;"></div>
+                        </div>
+                    </td>
+                    <td>
+                        <input id="ColorId-@item.ColorId" class="form-control form-control-sm col-md-4" placeholder="مثال:3" value="@item.Count">
+                    </td>
+                    <td>
+                        <button onclick="EditStoke(@item.ColorId, $('#ColorId-@item.ColorId').val())" class="btn btn-sm btn-success">ثبت</button>
+                    </td>
+                </tr>
+
+            }
         </tbody>
     </table>
 </div>
 <div class="modal-footer justify-content-end">
     <label>قیمت:</label>
-    <input class="form-control form-control-sm col-md-2" placeholder="مثال:50000 تومان">
-    <button class="btn btn-sm btn-success ml-md-4">ثبت</button>
+    @if (@Model.First().Product.PriceAfterDiscount != 0)
+    {
+        <input id="Price-@Model.First().Product.ProductId" class="form-control form-control-sm col-md-2" placeholder="مثال:50000 تومان" value="@Model.First().Product.PriceAfterDiscount">
+    }
+    else
+    {
+        <input id="Price-@Model.First().ProductId" class="form-control form-control-sm col-md-2" placeholder="مثال:50000 تومان" value="@Model.First().Product.PriceBeforeDiscount">
+    }
+
+    <button onclick="EditPrice(@Model.First().ProductId, $('#Price-@Model.First().ProductId').val())" class="btn btn-sm btn-success ml-md-4">ثبت</button>
 </div>
+
+
+<script>
+    function EditStoke(id, count) {
+        $.post("/Admin/Product/EditStoke?Id=" + id + "&count=" + count);
+    }
+    function EditPrice(Id, Price) {
+        $.post("/Admin/Product/EditPrice?Id=" + Id + "&Price=" + Price);
+    }
+</script>
