--- a/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
@@ -12,7 +12,15 @@ else
         <div id="Property" class="form-inline col-md-7">
             <label class="ml-5">@item.Name:</label>
             <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
-            <input id="PropertyValue" name="Value" class="form-control form-control-sm">
+            @if (ViewBag.PropertyId != null)
+            {
+                <input id="PropertyValue" name="Value" class="form-control form-control-sm" value="@item.TblProductPropertyRel.Where(pp=>pp.PropertyId==item.PropertyId && pp.ProductId==(int)ViewBag.PropertyId).SingleOrDefault().Value">
+
+            }
+            else
+            {
+                <input id="PropertyValue" name="Value" class="form-control form-control-sm">
+            }
         </div>
     }
 }
