--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input class="form-control uk-text-small" type="text" placeholder="متن جستجو">
+                                    <input class="form-control uk-text-small" type="text" placeholder="متن جستجو" value="@ViewBag.Search">
                                 </div>
 
                             </div>
@@ -21,7 +21,7 @@
                             <button onclick="BtnSearch()" type="button" class="btn btn-primary btn-sm">جستجو<span class="icon-holder uk-margin-small-right" uk-icon="search-outline"></span></button>
                         </div>
                         <div class="form-group pb-0 mb-0 mr-md-3">
-                            <a id="Create" href="#" class="btn btn-success btn-sm"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+                            <a id="Create" href="/Admin/Product/Create" class="btn btn-success btn-sm"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
                         </div>
                     </div>
 
@@ -53,18 +53,18 @@
                                         }
                                         else
                                         {
-                                            <span class="text-danger">@item.PriceBeforeDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
+                                            <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
                                         }
                                     </td>
                                     <td></td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                            <a href="#" class="text-primary" uk-icon="create-outline"></a>
+                                            <a href="/Admin/Product/Edit/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
                                         </span>
                                     </td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
-                                            <a id="Stock" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="help-circle-outline"></a>
+                                            <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="help-circle-outline"></a>
                                         </span>
                                     </td>
                                 </tr>
@@ -87,12 +87,12 @@
 @section Script{
     <script>
 
-        $("#Stock").click(function () {
+        function Stock(Id) {
             $(".modal-content").html("");
-            $.get("/Admin/Product/Stock", function (result) {
+            $.get("/Admin/Product/Stock/" + Id, function (result) {
                 $(".modal-content").html(result);
             });
-        });
+        }
 
     </script>
 }
