Ticket and History

--- a/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_UserNavigation.cshtml
@@ -4,8 +4,7 @@
     <a href="/User/Wallet">کیف پول</a>
     <a href="/User/Cart">سبد خرید</a>
     <a href="/User/Comparison">لیست مقایسه</a>
-    <a href="">سابقه خرید ها</a>
+    <a href="/User/Order">سابقه خرید ها</a>
     <a href="/User/Bookmarks">لیست علاقه مندی ها</a>
-    <a href="/User/Order">پیگیری سفارش</a>
-    <a href="">پشتیبانی</a>
+    <a href="/User/Ticket">پشتیبانی</a>
 </nav>
