--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -367,6 +367,16 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
       /* Microsoft Edge */
       color: #ddd; } }
 
+textarea {
+  resize: vertical;
+  -moz-transition-property: border-color, box-shadow !important;
+  -o-transition-property: border-color, box-shadow !important;
+  -webkit-transition-property: border-color, box-shadow !important;
+  transition-property: border-color, box-shadow !important;
+  margin-bottom: 0;
+  min-height: 28px;
+  height: 72px; }
+
 .fg-col {
   margin-bottom: 20px;
   display: flex;
@@ -382,12 +392,6 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
   .fg-col .radio {
     display: flex;
     margin: 6px 0 6px auto; }
-  .fg-col textarea {
-    resize: vertical;
-    transition-property: border-color;
-    margin-bottom: 0;
-    min-height: 28px;
-    height: 72px; }
   .fg-col select.entry {
     height: 35px; }
   .fg-col input[type=color] {
@@ -1633,3 +1637,13 @@ footer {
 
 #offCanvas a:hover {
   background-color: #f5f5f5; }
+
+.badge {
+  background-color: #96027E;
+  text-align: center;
+  -moz-border-radius: 6px 6px 6px 6px;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
+  padding: 3px;
+  color: white;
+  font-size: 11px; }
