--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -243,6 +243,17 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
     }
 }
 
+textarea {
+    resize: vertical;
+    -moz-transition-property: border-color, box-shadow !important;
+    -o-transition-property: border-color, box-shadow !important;
+    -webkit-transition-property: border-color, box-shadow !important;
+    transition-property: border-color, box-shadow !important;
+    margin-bottom: 0;
+    min-height: 28px;
+    height: 72px;
+}
+
 .fg-col {
     margin-bottom: 20px;
     @include column;
@@ -263,15 +274,7 @@ input:not(input[type=checkbox]):not(input[type=radio]) {
         display: flex;
         margin: 6px 0 6px auto;
     }
-
-    textarea {
-        resize: vertical;
-        transition-property: border-color;
-        margin-bottom: 0;
-        min-height: 28px;
-        height: 72px;
-    }
-
+    
     select.entry {
         height: 35px;
     }
@@ -711,7 +714,7 @@ $background-highlight: #eee;
     .header {
 
         .biscuit {
-            display: none!important
+            display: none !important
         }
 
         .top {
@@ -1834,4 +1837,13 @@ footer {
     a:hover {
         background-color: #f5f5f5;
     }
+}
+
+.badge {
+    background-color: $primary;
+    text-align: center;
+    @include border-radius(6px,6px,6px,6px);
+    padding: 3px;
+    color: white;
+    font-size: 11px;
 }
