--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DataLayer.Models.TblProduct
 @{
-    ViewData["Title"] = "افزودن محصول";
+    ViewData["Title"] = "ویرایش محصول";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <div class="row flex-div">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="custom-file col-md-7 mt-3">
-                    <input asp-for="MainImage" type="file" accept="image/x-png,image/gif,image/jpeg" class="custom-file-input form-control form-control-sm">
+                    <input asp-for="MainImage" type="file" accept="image/x-png,image/gif,image/jpeg" class="custom-file-input form-control form-control-sm" onchange="inputChanged(this)">
                     <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر اصلی</label>
                 </div>
                 <span id="MainImageErorr" class="text-danger" asp-validation-for="MainImage"></span>
@@ -175,7 +175,7 @@
             </div>
             <div class="card-footer bg-white">
                 <span class="text-danger" id="SubmitErorr"></span>
-                <button id="SubmitCreateProduct" type="submit" disabled class="btn btn-success btn-sm text-white pull-right ml-4">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
+                <button id="SubmitCreateProduct" type="submit" disabled class="btn btn-success btn-sm text-white pull-right ml-4">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
             </div>
         </form>
     </div>
@@ -212,7 +212,21 @@
         });
 
         function SetNewInputGallery() {
-            $("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
+            $("#GalleryPanel").append(
+                `<div class="custom-file col-md-7 mt-3">
+                       <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                       <label class="custom-file-label" data-browse="انتخاب">
+                            انتخاب فایل
+                       </label>
+                     </div>`
+            );
+
+            //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
+        }
+
+        function inputChanged(sender) {
+            var fileName = sender.files[0].name;
+            sender.parentElement.querySelector('.custom-file-label').innerHTML = fileName;
         }
 
         function RemoveInputGallery() {
