--- a/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "پنل مدیریت قصر موبایل";
+    ViewData["Title"] = "پست ها";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
 
 
