--- a/GhasreMobile/Areas/Admin/Views/Comment/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Comment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblComment>
 @{
     ViewData["Title"] = "نظرات";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -8,13 +8,6 @@
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
         <div class="card flex-div border-0 main-shadow">
-            @*<div class="card-header bg-white">
-                    <div class="pr-1 pt-2">
-                        <div class="form-group pb-0 mb-0">
-                            <a id="Create" href="#" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
-                        </div>
-                    </div>
-                </div>*@
             <div id="card-table mt-4" class="card-body flex-div">
                 <div class="table-responsive flex">
                     <table class="table fixed">
@@ -27,16 +20,34 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                        <a id="Information" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Client.TellNo</td>
+                                    <td>@item.DateCreated</td>
+                                    <td>
+                                        @if (item.IsValid)
+                                        {
+                                            <span class="text-success">تایید شده</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="text-danger">تایید نشده</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                            <a onclick="Information(@item.CommentId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                        @if (!item.IsValid)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تایید نظر">
+                                                <a id="Success(@item.CommentId)" class="text-success" uk-icon="checkmark-circle-outline"></a>
+                                            </span>
+                                        }
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -44,7 +55,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*  @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
@@ -53,12 +64,20 @@
 @section Script{
     <script>
 
-        $("#Information").click(function () {
+        function Information(Id) {
             $(".modal-content").html("");
-            $.get("/Admin/Comment/Info", function (result) {
+            $.get("/Admin/Comment/Info/" + Id, function (result) {
                 $(".modal-content").html(result);
             });
-        });
+        }
+
+        function Success(Id) {
+            $.get("/Admin/Comment/ChangeStatus/" + Id, function (result) {
+                if (result == "true") {
+                    window.location.reload();
+                }
+            });
+        }
 
     </script>
 }
