--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -95,6 +95,14 @@
                             </ul>
                         </li>
                         <li class="nav-item active">
+                            <a href="/Admin/Order" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="basket"></i>
+                                </span>
+                                <span class="title">سفارشات</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
                             <a href="/Admin/Comment" class="LoadingDiv">
                                 <span class="icon-holder">
                                     <i uk-icon="chatbubble-ellipses"></i>
@@ -108,6 +116,14 @@
                                     <i uk-icon="images"></i>
                                 </span>
                                 <span class="title">اسلایدر</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Blog" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="book"></i>
+                                </span>
+                                <span class="title">بلاگ</span>
                             </a>
                         </li>
                     </ul>
