--- a/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblBannerAndSlide
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         افزودن اسلایدر
     </h6>
@@ -6,28 +7,34 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-action="Create" asp-controller="Slider" asp-area="Admin" data-ajax="true" enctype="multipart/form-data"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام</label>
-                <input class="form-control form-control-sm" placeholder="مثال: سامسونگ">
+                <input class="form-control form-control-sm" asp-for="Name" placeholder="مثال: سامسونگ">
+                <span class="text-danger" asp-validation-for="Name"></span>
             </div>
             <div class="form-group col-md-4">
-                <label>تاریخ انقضا</label>
-                <input type="date" class="form-control form-control-sm" placeholder="ثبت تاریخ انقضا">
+                <label>چند روزه : </label>
+                <input type="number" required class="form-control form-control-sm" name="SliderTime" placeholder="مثال : 2">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>افزودن لینک</label>
-                <input class="form-control form-control-sm" placeholder="لینک ">
+                <input class="form-control form-control-sm" asp-for="Link" placeholder="https://...">
+                <span class="text-danger" asp-validation-for="Link"></span>
             </div>
         </div>
         <label class="mt-2">تصویر اسلایدر</label>
         <br />
         <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm">
+            <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" required asp-for="ImageUrl">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
     </div>
@@ -35,3 +42,6 @@
         <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
     </div>
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
