--- a/GhasreMobile/Areas/Admin/Views/Brand/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Components/Create.cshtml
@@ -18,6 +18,7 @@
             <div class="form-group col-md-3">
                 <label>نام برند</label>
                 <input class="form-control form-control-sm" placeholder="مثال: سامسونگ" asp-for="Name">
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
         </div>
     </div>
