--- a/GhasreMobile/Areas/Admin/Views/Brand/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Components/Edit.cshtml
@@ -13,11 +13,13 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="BrandId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام برند</label>
                 <input class="form-control form-control-sm" placeholder="مثال: سامسونگ" asp-for="Name">
+                <span class="text-danger" asp-validation-for="Name"></span>
             </div>
         </div>
     </div>
