--- a/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/PropertyListAdmin.cshtml
@@ -9,18 +9,26 @@ else
 {
     foreach (var item in Model)
     {
-        <div id="Property" class="form-inline col-md-7">
-            <label class="ml-5">@item.Name:</label>
-            <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
-            @if (ViewBag.PropertyId != null)
-            {
-                <input id="PropertyValue" name="Value" class="form-control form-control-sm" value="@item.TblProductPropertyRel.Where(pp=>pp.PropertyId==item.PropertyId && pp.ProductId==(int)ViewBag.PropertyId).SingleOrDefault().Value">
+<div id="Property" class="form-inline col-md-7 mt-2">
+    <label class="ml-5 p-0 col-md-2 uk-text-right justify-content-start">@item.Name:</label>
+    <input id="PropetryNameId" name="PropertyId" type="hidden" value="@item.PropertyId" />
+    @if (ViewBag.PropertyId != null)
+    {
+        if (item.TblProductPropertyRel.Where(pp => pp.PropertyId == item.PropertyId && pp.ProductId == (int)ViewBag.PropertyId).SingleOrDefault() == null)
+        {
+            <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3">
+        }
+        else
+        {
+            <input id="PropertyValue" name="Value" class="form-control form-control-sm col-md-3" value="@item.TblProductPropertyRel.Where(pp => pp.PropertyId == item.PropertyId && pp.ProductId == (int)ViewBag.PropertyId).SingleOrDefault().Value">
+        }
 
-            }
-            else
-            {
-                <input id="PropertyValue" name="Value" class="form-control form-control-sm">
-            }
-        </div>
+
+    }
+    else
+    {
+        <input id="PropertyValue" name="Value" class="form-control form-control-sm">
+    }
+</div>
     }
 }
