--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<DataLayer.Models.TblProduct>
+@using GhasreMobile.Utilities
 @{
     ViewData["Title"] = "محصولات";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -12,7 +13,7 @@
                         <div class="form-input">
                             <div class="form-inline">
                                 <div class="form-group mx-sm-1 mb-2">
-                                    <input class="form-control uk-text-small" type="text" placeholder="متن جستجو" value="@ViewBag.Search">
+                                    <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="متن جستجو" value="@ViewBag.Search">
                                 </div>
 
                             </div>
@@ -56,7 +57,7 @@
                                             <span class="text-danger">@item.PriceAfterDiscount.Value.ToString("#,0 تومان") تخفیف دار</span>
                                         }
                                     </td>
-                                    <td></td>
+                                    <td>@item.DateCreated.Value.AllToShamsi()</td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
                                             <a href="/Admin/Product/Edit/@item.ProductId" class="text-primary" uk-icon="create-outline"></a>
@@ -64,7 +65,7 @@
                                     </td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
-                                            <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="help-circle-outline"></a>
+                                            <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="document-text"></a>
                                         </span>
                                     </td>
                                 </tr>
@@ -92,6 +93,10 @@
             $.get("/Admin/Product/Stock/" + Id, function (result) {
                 $(".modal-content").html(result);
             });
+        }
+
+        function BtnSearch() {
+            window.location.href = "/Admin/Product?page=1&Search=" + $("#SearchInput").val();
         }
 
     </script>
