--- a/GhasreMobile/Areas/User/Views/Profile/ChangePassword.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/ChangePassword.cshtml
@@ -1,27 +1,36 @@
-﻿
+﻿@model ResetChangePasswordVm
 @{
     ViewData["Title"] = "Index";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
 <div class="rowr">
-    <form class="form mat-card uk-width-1-2-at-m uk-width-1-2-at-l uk-width-1-1-at-s">
+    <form asp-action="ChangePassword" asp-controller="Profile" asp-area="User" class="form mat-card uk-width-1-2-at-m uk-width-1-2-at-l uk-width-1-1-at-s">
         <h4 class="uk-margin-bottom">
             تغییر رمز عبور
         </h4>
+        <div class="fg-col">
+            <label class="fg-label">
+                رمز عبور قدیمی
+            </label>
+            <input type="password" class="entry" asp-for="OldPassword" />
+            <span class="text-danger" asp-validation-for="OldPassword"></span>
 
+        </div>
         <div class="fg-col">
             <label class="fg-label">
                 رمز عبور جدید
             </label>
-            <input type="text" class="entry" value="" />
+            <input type="password" class="entry" asp-for="Password" />
+            <span class="text-danger" asp-validation-for="Password"></span>
         </div>
 
         <div class="fg-col">
             <label class="fg-label">
                 تکرار رمز عبور
             </label>
-            <input type="text" class="entry" value="" />
+            <input type="password" class="entry" asp-for="RePassword" />
+            <span class="text-danger" asp-validation-for="RePassword"></span>
         </div>
 
         <div class="actions">
