--- a/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/User/Views/Shared/_Layout.cshtml
@@ -139,9 +139,16 @@
         کلیه حقوق این متعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
         <a href="https://arvintavco.com">شرکت ایده پرداز آروین تاو</a>
     </p>
-
+    <link href="~/css/Load.css" rel="stylesheet" />
+    <!-- #Loadinh -->
+    <div id="overlay">
+        <div class="cv-spinner">
+            <span class="spinner"></span>
+        </div>
+    </div>
     <!--Pwa-->
     @*<script src="~/app.js"></script>*@
+    <script src="~/Jquery/jquery-3.4.1.min.js"></script>
 
     <script src="~/js/uikit.min.js"></script>
     <script src="~/js/uikit-icons.js"></script>
