--- a/GhasreMobile/Areas/User/_ViewImports.cshtml
+++ b/GhasreMobile/Areas/User/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using DataLayer.ViewModels
+@using DataLayer.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
